# sketch-3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  init.cfg
samples/BRDF/: CMakeLists.txt  README.md
samples/BRDF/src/: Main.cpp
samples/Bokeh/: CMakeLists.txt  README.md
samples/Bokeh/src/: Main.cpp
samples/BurningPaper/: CMakeLists.txt  README.md
samples/BurningPaper/Shaders/: frag.glsl  vert.glsl
samples/BurningPaper/src/: Main.cpp
samples/CelShading/: CMakeLists.txt  README.md
samples/CelShading/Shaders/: contourRender.frag  contourRender.vert  normalRender.frag  normalRender.vert
samples/CelShading/src/: Main.cpp
samples/DeferredShading/: CMakeLists.txt  README.md
samples/DeferredShading/Shaders/: frag.glsl
samples/DeferredShading/src/: Main.cpp
samples/FrustumCullingInstancing/: CMakeLists.txt  README.md
samples/FrustumCullingInstancing/src/: Main.cpp
samples/FrustumCullingStaticBatching/: CMakeLists.txt  README.md
samples/FrustumCullingStaticBatching/src/: Main.cpp
samples/InteractiveWater/: CMakeLists.txt
samples/InteractiveWater/Shaders/: drawShadow.hlsl  frag.glsl  frag.hlsl  fullscreenQuadFrag.hlsl  fullscreenQuadVert.hlsl  recordShadow.hlsl  shadowFrag.hlsl  vert.glsl  vert.hlsl
samples/InteractiveWater/src/: Main.cpp
samples/Media/: hellknight.md5mesh  sponza.mtl
samples/Media/TankScene/: barricade_geoShape.mtl  ground_planeShape.mtl  tank_geoShape.mtl
samples/Media/models/: Credits.txt
samples/NormalMapping/: CMakeLists.txt  README.md
samples/NormalMapping/Shaders/: frag.glsl  vert.glsl
samples/NormalMapping/src/: Main.cpp
samples/ParallaxMapping/: CMakeLists.txt  README.md
samples/ParallaxMapping/Shaders/: frag.glsl  vert.glsl
samples/ParallaxMapping/src/: Main.cpp
samples/SSAO/: CMakeLists.txt  README.md
samples/SSAO/src/: Main.cpp
samples/Shaders/BRDF/: frag.glsl  fullscreenQuad_frag.glsl  fullscreenQuad_vert.glsl  normalMapped_frag.glsl  normalMapped_vert.glsl  vert.glsl
samples/Shaders/Bokeh/: debug.glsl  frag.glsl  quarterQuad.glsl  recordDepth_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  vert.glsl
samples/Shaders/BurningPaper/: blurX.hlsl  blurY.hlsl  downSample.hlsl  frag.glsl  frag.hlsl  fullscreenQuad.hlsl  quarterQuad.hlsl  toneMapping.hlsl  vert.hlsl
samples/Shaders/CelShading/: contourRender_frag.hlsl  contourRender_vert.glsl  contourRender_vert.hlsl  frag.hlsl  fullScreenQuad.hlsl  imageMultiplication.hlsl  normalRender_frag.glsl  normalRender_frag.hlsl  normalRender_vert.glsl  normalRender_vert.hlsl  simplePass.hlsl  sobelFilter.hlsl  vert.hlsl
samples/Shaders/DeferredShading/: frag.hlsl  record_frag.glsl  record_frag.hlsl  record_vert.glsl  record_vert.hlsl  vert.glsl  vert.hlsl
samples/Shaders/FrustumCullingInstancing/: frag.glsl  frag.hlsl  vert.glsl  vert.hlsl
samples/Shaders/FrustumCullingStaticBatching/: frag.hlsl  vert.glsl  vert.hlsl
samples/Shaders/NormalMapping/: frag.glsl  frag.hlsl  vert.glsl  vert.hlsl
samples/Shaders/ParallaxMapping/: frag.glsl  frag.hlsl  vert.glsl  vert.hlsl
samples/Shaders/SSAO/: frag.glsl  record_frag.glsl  record_vert.glsl  ssao.glsl  vert.glsl
samples/Shaders/Shadow/: frag.glsl  frag.hlsl  recordShadow_frag.hlsl  recordShadow_vert.hlsl  vert.glsl  vert.hlsl
samples/Shaders/SkeletalAnimation/: frag.glsl  frag.hlsl  vert.glsl  vert.hlsl  vertSkinned.glsl  vertSkinned.hlsl
samples/Shaders/SponzaDemo/: frag.glsl  fullscreen_frag.glsl  fullscreen_vert.glsl  hellknight_frag.glsl  hellknight_record_shadow_vert.glsl  hellknight_vert.glsl  record_frag.glsl  record_shadow_frag.glsl  sponza_frag.glsl  sponza_record_shadow_vert.glsl  vert.glsl
samples/Shaders/TessendorfOcean/: frag.glsl  frag.hlsl  vert.glsl  vert.hlsl
samples/Shadow/: CMakeLists.txt  README.md
samples/Shadow/Shaders/: frag.glsl  vert.glsl
samples/Shadow/src/: Main.cpp  Shadow.cpp
samples/SkeletalAnimation/: CMakeLists.txt  README.md
samples/SkeletalAnimation/src/: Main.cpp
samples/SponzaDemo/: CMakeLists.txt  README.md
samples/SponzaDemo/src/: Main.cpp
samples/TessendorfOcean/: CMakeLists.txt  README.md
samples/TessendorfOcean/Shaders/: frag.glsl  vert.glsl
samples/TessendorfOcean/include/: Ocean.h
samples/TessendorfOcean/src/: Main.cpp  Ocean.cpp
sketch3d-main/: CMakeLists.txt
sketch3d-main/include/framework/: AnimationState.h  Camera.h  ForwardRenderingPipeline.h  Light.h  Material.h  MaterialCodeGenerator.h  Mesh.h  RenderingPipeline.h  RenderingPipelineContext.h  Scene.h  SimpleObject.h  Skeleton.h  SkinnedMesh.h  SubMesh.h  VisualNode.h
sketch3d-main/include/math/: Matrix3x3.h  Matrix4x4.h  Quaternion.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h
sketch3d-main/include/render/: Buffer.h  BufferObject.h  BufferObjectManager.h  Mesh.h  (+29 more)
src/math/: .Matrix3x3.cpp.swp  .Matrix3x3.h.swp  .Vector3.cpp.swp  .Vector3.h.swp  CMakeLists.txt  Complex.cpp  Constants.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Plane.cpp  Plane.h  Platform.cpp  Platform.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Vector2.cpp  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/render/: AnimationState.cpp  BufferObject.cpp  BufferObjectManager.cpp  CMakeLists.txt  CompositeNode.cpp  CompositeNode.h  Geometry.cpp  Geometry.h  GlobalState.cpp  GlobalState.h  Material.cpp  Mesh.cpp  ModelManager.cpp  Node.cpp  Node.h  RenderContext.cpp  RenderQueue.cpp  RenderQueueItem.cpp  RenderState.cpp  RenderState.h  RenderSystem.cpp  RenderSystem.h  RenderSystemOpenGL.cpp  RenderSystemOpenGL.h  RenderTexture.cpp  RenderWindow.cpp  RenderWindow.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  SceneGraph.cpp  SceneGraph.h  SceneTree.cpp  Shader.cpp  Skeleton.cpp  SkinnedMesh.cpp  Spatial.cpp  Spatial.h  Texture.cpp  Texture2D.cpp  (+2 more)
src/system/: CMakeLists.txt  Logger.cpp  Platform.cpp  Utils.cpp  Window.cpp  WindowEvent.cpp  WindowImplementation.cpp
tests/: CMakeLists.txt
tests/math/: Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Ray.cpp  Vector3.cpp  Vector4.cpp
tests/render/: Geometry.cpp  Node.cpp  RenderState.cpp  SceneGraph.cpp
(+247 files in other folders)
