cmake_minimum_required (VERSION 2.8)

add_subdirectory(BurningPaper)
add_subdirectory(CelShading)
add_subdirectory(DeferredShading)
add_subdirectory(FrustumCullingInstancing)
add_subdirectory(InteractiveWater)
add_subdirectory(NormalMapping)
add_subdirectory(ParallaxMapping)
add_subdirectory(Shadow)
add_subdirectory(SkeletalAnimation)
add_subdirectory(SponzaDemo)
add_subdirectory(SSAO)
add_subdirectory(TessendorfOcean)